@@ -45,13 +45,13 @@ importFrom(KEGG.db,KEGGPATHID2NAME)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
-importFrom(ggplot2,opts)
 importFrom(ggplot2,scale_colour_gradient)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
-importFrom(ggplot2,theme_text)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(methods,new)
