@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.5.1
 ------------------------
+ o update codes of plot functions accompaning with ggplot2 (version 0.9.2) <2012-09-06, Thu> 
  o bug fixed of buildGOmap due to the empty GO annotation query from biomaRt <2012-07-18, Wed>
 
 Changes IN VERSION 1.5.0
